--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,25 @@
-<h1>Hola mundo</h1>
+<div class="container">
+  <h1>Hola mundo</h1>
 
-<table>
+<table class="table table-dark">
   <thead>
     <tr>
-      <th>Cualquier cosa</th>
+      <th *ngFor="let title of titles">
+        {{title}}
+      </th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let coin of coins">
+    <tr *ngFor="let coin of coins; let i = index">
       <td>
-        <img [src]="coin.image" alt="{{coin.name}}">
+        {{i + 1}}
+      </td>
+      <td>
+        <img [src]="coin.image" alt="{{coin.name}}" style="width: 2rem;">
         <span>{{coin.name}}</span>
         <span>{{coin.symbol}}</span>
       </td>
     </tr>
   </tbody>
 </table>
+</div>
