--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,21 @@
       </td>
       <td>
         <img [src]="coin.image" alt="{{coin.name}}" style="width: 2rem;">
-        <span>{{coin.name}}</span>
-        <span>{{coin.symbol}}</span>
+        <span>
+          {{coin.name}}
+        </span>
+        <span>
+          {{coin.symbol}}
+        </span>
+      </td>
+      <td>
+        {{coin.current_price.toLocaleString()}}
+      </td>
+      <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success' : 'text-danger'">
+        {{coin.price_change_percentage_24h.toLocaleString()}}
+      </td>
+      <td>
+        {{coin.total_volume.toLocaleString()}}
       </td>
     </tr>
   </tbody>
