--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,20 +11,20 @@
   </thead>
   <tbody>
     <tr *ngFor="let coin of coins; let i = index">
-      <td>
+      <td class="text-muted">
         {{i + 1}}
       </td>
       <td>
         <img [src]="coin.image" alt="{{coin.name}}" style="width: 2rem;">
-        <span>
+        <span class="ms-3">
           {{coin.name}}
         </span>
-        <span>
+        <span class="text-muted text-uppercase ms-2">
           {{coin.symbol}}
         </span>
       </td>
       <td>
-        {{coin.current_price.toLocaleString()}}
+        ${{coin.current_price.toLocaleString()}}
       </td>
       <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success' : 'text-danger'">
         {{coin.price_change_percentage_24h.toLocaleString()}}
